<resources>
    <string name="app_name">SafeOut</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="signup">Registrarse</string>
    <string name="backend_error">Error inesperado</string>
    <string name="auth_error_empty_fields">Ingresa nombre de usuario y contraseña</string>
    <string name="drawer_home">Inicio</string>
    <string name="drawer_maps">Mapa</string>
    <string name="drawer_logout">Cerrar Sesión</string>
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menu lateral</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="check_in">CHECK IN con NFC</string>
    <string name="scan_qr_in">Check IN</string>
    <string name="scan_qr_out">Check OUT</string>
    <string name="scan_qr_get">Ver Información del Lugar</string>
    <string name="nfc_compatible">Tu dispositivo es compatible con NFC</string>
    <string name="nfc_no_compatible">Tu dispositivo no es compatible con NFC</string>
    <string name="nfc_activado">NFC activado</string>
    <string name="nfc_desactivado">NFC desactivado</string>
    <string name="drawer_nfc">Logo NFC</string>
    <string name="mantener_tarjeta">Mantenga el celular sobre el Dispositivo</string>
    <string name="drawer_search">Buscar</string>
    <string name="drawer_showInfo">Ver Info</string>
    <string name="drawer_checkIn">Check In</string>
    <string name="drawer_checkOut">Check Out</string>
    <string name="drawer_myReservations">Mis Reservas</string>
    <string name="cancel_reservation">Cancelar Reserva</string>
    <string name="submit_reservation">Confirmar Reserva</string>
    <string name="reservation_place">Lugar</string>
    <string name="reservation_section">Sector</string>
    <string name="reservation_date">Día</string>
    <string name="reservation_time">Hora</string>
    <string name="select_placeholder">Seleccionar</string>
    <string name="dialog_cancel_reservation">¿Seguro que quieres cancelar esta reserva?</string>
    <string name="dialog_yes">Sí</string>
    <string name="dialog_no">No</string>
    <string name="dialog_accept">Aceptar</string>
    <string name="dialog_reservation_submitted">Reserva confirmada con éxito.</string>
    <string name="snackbar_reservation_canceled">Reserva cancelada</string>
    <string name="no_reservations">Sin reservas</string>
    <!-- Luego ver donde mandamos el API key   -->
    <string name="google_maps_key">AIzaSyBBNHFycep37WjF9t5zTaQk1nfCjwtR5KQ</string>
    <string name="back">Atrás</string>
    <string name="title_section">Sectores Disponibles</string>
    <string name="title_sectionName">Nombre</string>
    <string name="title_sectionOccupation">Ocupación</string>
    <string name="title_sectionBtn">Reservar</string>
    <string name="title_sectionBtnAction">Acción</string>
    <string name="search_place">Buscar Lugar…</string>
    <string name="title_search_places">Búsqueda de Lugares</string>
    <string name="title_map">Mapa de Lugares</string>
    <string name="title_my_reservations">Mis Reservas</string>
    <string name="title_select_date">Seleccionar Día</string>
    <string name="title_select_time">Seleccionar Hora</string>
    <string name="title_place_detail">Detalle del Lugar</string>
    <string name="occupation_level_1">Vacío</string>
    <string name="occupation_level_2">Poca gente</string>
    <string name="occupation_level_3">A la mitad</string>
    <string name="occupation_level_4">Mucha gente</string>
    <string name="occupation_level_5">Casi lleno</string>
    <string name="occupation_level_6">Lleno</string>
    <string name="check_out">CHECK OUT con NFC</string>
    <string name="error_image">Ups! Error al obtener imagen</string>
</resources>
