<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@drawable/gradient"
    tools:context=".activities.AuthActivity"
    >

    <RelativeLayout
        android:id="@+id/viewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"
            android:layout_above="@id/authForm"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/app_name" />

        <RelativeLayout
            android:id="@+id/authForm"
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            >
            <EditText
                android:id="@+id/editTextUser"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:autofillHints="username"
                android:background="#11000000"
                android:drawableStart="@drawable/ic_action_user"
                android:ems="10"
                android:hint="@string/user"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                />
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:autofillHints="password"
                android:background="#11000000"
                android:drawableStart="@drawable/ic_action_pass"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLogin"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_below="@+id/authForm"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            android:onClick="onButtonClicked"
            android:focusable="false"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textViewLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@id/cardViewLogin"
            android:text="@string/signup"
            android:textColor="@color/colorSecondary"
            android:padding="10dp"
            android:onClick="onButtonClicked"
            android:focusable="false"
            />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />


</RelativeLayout>