<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:background="@color/colorLightGrey">

    <Button
        android:id="@+id/buttonMap"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/btn_map"
        android:elevation="10dp"
        android:gravity="start|center_vertical"
        android:minWidth="300dp"
        android:paddingLeft="20dp"
        android:scaleType="centerInside"
        android:shadowRadius="0.5"
        android:text="@string/drawer_maps"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonListar"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/lupa"
        android:elevation="10dp"
        android:gravity="start|center_vertical"
        android:minWidth="300dp"
        android:paddingLeft="20dp"
        android:scaleType="centerInside"
        android:shadowRadius="0.5"
        android:text="@string/drawer_search"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonMap" />

    <Button
        android:id="@+id/buttonVerInfo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/verinfo"
        android:elevation="10dp"
        android:gravity="start|center_vertical"
        android:minWidth="300dp"
        android:paddingLeft="20dp"
        android:scaleType="centerInside"
        android:shadowRadius="0.5"
        android:text="@string/drawer_showInfo"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonListar" />

        <Button
            android:id="@+id/buttonCheckin"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:background="@drawable/checkin"
            android:elevation="10dp"
            android:gravity="right|center_vertical|end"
            android:minWidth="300dp"
            android:paddingRight="20dp"
            android:scaleType="centerInside"
            android:shadowRadius="0.5"
            android:text="@string/drawer_checkIn"
            android:layout_marginTop="32dp"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonVerInfo" />


        <Button
            android:id="@+id/buttonCheckOut"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:background="@drawable/checkout"
            android:elevation="10dp"
            android:gravity="start|center_vertical"
            android:minWidth="300dp"
            android:paddingLeft="20dp"
            android:scaleType="centerInside"
            android:shadowRadius="0.5"
            android:text="@string/drawer_checkOut"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonVerInfo" />




    </androidx.constraintlayout.widget.ConstraintLayout>