<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <LinearLayout
        android:id="@+id/reservationPlaceSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBgItem"
            >
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp"
                android:text="@string/reservation_place"
                />
            <TextView
                android:id="@+id/textViewAddReservationPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textColor="@color/colorSecondary"
                android:textStyle="bold"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTertiary"
            android:layout_marginVertical="2dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reservationSectionSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/reservationPlaceSelector"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBgItem"
            >
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp"
                android:text="@string/reservation_section"
                />
            <TextView
                android:id="@+id/textViewAddReservationSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp"
                android:textColor="@color/colorSecondary"
                android:textStyle="bold"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTertiary"
            android:layout_marginVertical="2dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reservationDateSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/reservationSectionSelector"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBgItem"
        >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:text="@string/reservation_date"
            />
        <TextView
            android:id="@+id/textViewAddReservationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"
            android:text="@string/select_placeholder"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTertiary"
        android:layout_marginVertical="2dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reservationTimeSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_below="@id/reservationDateSelector"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBgItem"
        >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:text="@string/reservation_time"
            />
        <TextView
            android:id="@+id/textViewAddReservationTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"
            android:text="@string/select_placeholder"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTertiary"
        android:layout_marginVertical="2dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSubmitReservation"
        android:text="@string/submit_reservation"
        style="@style/button_container_bottom"
        android:layout_margin="10dp"
        android:enabled="false"
        />

</RelativeLayout>
